# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/hash.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/snapshot.py:
  Move gen_contents_file() and gen_digest_file() from
  catalyst.target.generic_stage to catalyst.hash

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/netboot/netboot-controller.sh, +targets/netboot/netboot-final.sh,
  -targets/support/netboot-final.sh:
  Move netboot-final.sh from targets/support/ to targets/netboot/

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  -examples/netboot2_template.spec, +examples/netboot_template.spec,
  +modules/catalyst/target/netboot.py, -modules/catalyst/target/netboot2.py,
  +targets/netboot/nb-busybox.cf, +targets/netboot/netboot-controller.sh,
  +targets/netboot/netboot-copyfile.sh, +targets/netboot/netboot-pkg.sh,
  -targets/netboot2/nb-busybox.cf, -targets/netboot2/netboot2-controller.sh,
  -targets/netboot2/netboot2-copyfile.sh, -targets/netboot2/netboot2-pkg.sh,
  targets/support/kmerge.sh, +targets/support/netboot-final.sh,
  -targets/support/netboot2-final.sh:
  Rename netboot2 target to netboot

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/lock.py:
  Cleanups to make pychecker happy

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/__init__.py, modules/catalyst/spawn.py:
  Grab just the first value return from the now-working call to
  resource.getrlimit()

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  -examples/netboot_template.spec, -modules/catalyst/target/netboot.py,
  -targets/netboot/netboot-chroot.sh, -targets/netboot/netboot-combine.sh,
  -targets/netboot/netboot-controller.sh, -targets/netboot/netboot-image.sh:
  Whack the outdated and non-functional netboot target
